MAIN - fixing spacing of main

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,17 @@ p.hero_find_thirst {
   width: 900px;
   line-height: 4.5rem;
   text-align: center;
+  margin: 6rem 0 3rem 0;
+}
+
+.main_headline_beer {
+  margin: 6rem 0 1rem 0;
+}
+
+.main_paragraph_beer {
+  width: 600px;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 /* social */
